--- a/index.html
+++ b/index.html
@@ -24,8 +24,95 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+
+				<section>
+					<h1>Startup Weekend Tours 2016</h1>
+					<pre style="text-align: center;" class="blue">Soirée préparatoire</pre>
+                    <p><small>Rodrigo Reyes</small></p>
+				</section>
+
+				<section>
+					<section>
+						<h1>L'équipe</h1>
+						<div>
+							<img style="width:30%; border:0; margin: 4" src="./img/Business.png">
+							<img style="width:30%; border:0; margin: 4"  src="./img/Designer.png">
+							<img style="width:30%; border:0; margin: 4"  src="./img/Tech.png">
+						</div>
+					</section>
+
+					<section>
+						<h1>Créer l'équipe</h1>
+						<ul>
+							<li>Complémentarité</li>
+							<li>Collaboration et transversalité</li>
+							<li>Mais aussi: clarifier la PI</li>
+						</ul>
+					</section>
+
+					<section>
+						<h1>Développeurs</h1>
+						<ul>
+							<li>Vérifier rapidement la compatibilité</li>
+							<li>Mélangez-vous</li>
+						</ul>
+					</section>
+
+				</section>
+
+
+				<section>
+					<section><h1>Préparation</h1></section>
+					<section>
+						<h2>Une course de fond intense</h2>
+						<ul>
+							<li>54h = très court</li>
+							<li>Différent du travail normal</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Développeurs</h2>
+						
+						<h4>Les pièges chronophage: la mise en place et le NIH</h4>
+
+						<ul>
+							<li>Préparer des modèles de projet<br>(yeoman, boilerplates, etc)</li>
+							<li>Favoriser les technologies de dev rapide</li>
+							<li>Codez efficacement &rarr; utilisez des frameworks<br>(firebase)</li>
+							<li>Affutez vos outils (comptes github/bitbucket, serveurs)</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Designers</h2>
+						<ul>
+							<li>Préparez vos outils</li>
+							<li>Apprenez les outils de maquettage rapide (proto.io, sktech, invision, etc)</li>
+							<li>???</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Business</h2>
+						<ul>
+							<li>Préparez vos réseaux</li>
+							<li>Entrainez-vous au lean canvas</li>
+							<li>Choisissez vos outils de productivité (trello, mailchimp, google forms, etc) </li>
+							<li>???</li>
+						</ul>
+					</section>
+
+				</section>
+
+				<section>
+					<section>Réalisation</section>
+					<section>
+						<h2>Terminer est plus important que paufiner</h>
+						<p>(Tout est jetable)</p>
+					</section>
+				</section>
+				
 			</div>
 		</div>
 
